*1 add lazy loading page with ionicPage decorators to most

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -92,7 +92,7 @@
 
 
                 <ion-col  col-4 class="category-col">
-                    <div class="category" (click)="gosubcategory(services)">
+                    <div class="category" (click)="gosubcategory('services')">
                         <div class='category-img'>
                             <img src="../assets/img/png/customer-service.png" alt=""/>
                         </div>
@@ -177,7 +177,7 @@
 
 
                 <ion-col  col-4 class="category-col">
-                    <div class="category" (click)="gosubcategory(services)">
+                    <div class="category" (click)="gosubcategory('services')">
                         <div class='category-img'>
                             <img src="../assets/img/png/customer-service.png" alt=""/>
                         </div>
