*3 add lazy loading to rest pages

--- a/src/pages/my-balance/my-balance.html
+++ b/src/pages/my-balance/my-balance.html
@@ -15,9 +15,9 @@
                 <h2>{{'My Balance' | translate}}</h2>
                 <h4 class="last-charge">{{'Last Recharge'|translate}}<span>12/10/2017</span></h4>
             </div>
-            <h2>220 <span>{{'EGP'|translate}}</span></h2>  
+            <h2>220 <span>{{'EGP'|translate}}</span></h2>
             <div class="view-history">
-                <button ion-button outline (click)="BalanceHistorymodal()">{{'view history'|translate}}</button> 
+                <button ion-button outline (click)="BalanceHistorymodal()">{{'view history'|translate}}</button>
             </div>
         </div>
 
@@ -29,21 +29,21 @@
             <ion-list>
                 <ion-item>
                     <ion-thumbnail item-start>
-                        <img src="../../assets/img/pay/nbe.png">
+                        <img src="assets/img/pay/nbe.png">
                     </ion-thumbnail>
                     <h2>Charge via Bank</h2>
                     <p>You can charge your account via this bank account 012012254</p>
                 </ion-item>
                 <ion-item>
                     <ion-thumbnail item-start>
-                        <img src="../../assets/img/pay/post.jpg">
+                        <img src="assets/img/pay/post.jpg">
                     </ion-thumbnail>
                     <h2>Charge via Egypt post</h2>
                     <p>You can charge your account via this bank account 012012254</p>
                 </ion-item>
                 <ion-item>
                     <ion-thumbnail item-start>
-                        <img src="../../assets/img/pay/vod.png">
+                        <img src="assets/img/pay/vod.png">
                     </ion-thumbnail>
                     <h2>Charge via vodafone cash</h2>
                     <p>You can charge your account via this bank account 012012254</p>
