--- a/src/pages/reservations-list/reservations-list.html
+++ b/src/pages/reservations-list/reservations-list.html
@@ -17,8 +17,8 @@
                 <h2>حسين محمود</h2>
                 <h4> السبت <span item-end class="time">12/10/2017</span></h4>
                 <div class="bottom-btn">
-                    <button ion-button outline (click)="ConfirmReservationmodal()">{{'Refuse'|translate}}</button>
-                    <button ion-button outline (click)="accepted()">{{'Accept'|translate}}</button>
+                    <button ion-button outline (click)="sendReservationStatus()">{{'Refuse'|translate}}</button>
+                    <button ion-button outline (click)="sendReservationStatus()">{{'Accept'|translate}}</button>
                 </div>
 
             </ion-item>
