--- a/src/pages/confirm-reservation/confirm-reservation.html
+++ b/src/pages/confirm-reservation/confirm-reservation.html
@@ -1,7 +1,7 @@
 <ion-header>
 
     <ion-navbar>
-        <ion-title>{{'Refuse'|translate}} </ion-title>
+        <ion-title>{{'Refuse'}} </ion-title>
         <ion-buttons start right>
             <button ion-button (click)="dismiss()">
                     <ion-icon name="close"></ion-icon>
@@ -15,14 +15,14 @@
     <div class="inner-content">
         <ion-list>
             <ion-item>
-                <ion-label stacked>{{'reason refuse'|translate}}</ion-label>
+                <ion-label stacked>{{'reason refuse'}}</ion-label>
                 <ion-textarea></ion-textarea>
             </ion-item>
-        </ion-list>     
+        </ion-list>
     </div>
 </ion-content>
 <ion-footer>
     <ion-toolbar>
-        <ion-title (click)="Send()">{{'send'|translate}}</ion-title>
+        <ion-title (click)="Send()">{{'send'}}</ion-title>
     </ion-toolbar>
 </ion-footer>
