--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -10,7 +10,7 @@
     <div class="inner-content">
         <div class="top-header">
             <div class="cover-image">
-                <img src="../../assets/img/bg1.jpg" alt=""/>
+                <img src="assets/img/bg1.jpg" alt=""/>
 
                 <div class="cover-cahnge" (click)="imageActionSheet()">
                     <ion-icon md='ios-camera-outline' ios='ios-camera-outline'></ion-icon>
@@ -21,9 +21,9 @@
                 <ion-row>
                     <ion-col col-12 class="user-img-div">
                         <div class="user-img">
-                            <img src="../../assets/img/12.jpg" alt=""/>
+                            <img src="assets/img/12.jpg" alt=""/>
                         </div>
-                        <button ion-button item-end class="setting-btn" (click)="goEditProfile()">
+                        <button ion-button item-end class="setting-btn" (click)="navigateTo('EditProfile', true)">
                             <ion-icon ios="ios-settings-outline" md="ios-settings-outline"></ion-icon>
                         </button>
                         <h2 class="user-name">{{'Hussein Mahmoud'| translate}} <span><ion-icon md="ios-checkmark-circle-outline" ios="ios-checkmark-circle-outline"></ion-icon></span></h2>
@@ -37,7 +37,7 @@
                         <div class="bottom-btn">
                             <ion-row>
                                 <ion-col col-3 class="call-us">
-                                    <ion-icon name="call" (click)="openPopover($event)"></ion-icon> 
+                                    <ion-icon name="call" (click)="openPopover($event)"></ion-icon>
                                 </ion-col>
                                 <ion-col col-6>
                                     <div class="rate-div">
@@ -52,10 +52,10 @@
                                             <div class="stats-container">
                                                 <div class="rating-b" >
                                                     <div class="rating-b-1">
-                                                        <img src="../assets/img/rating-b-1.png" alt=""/>
+                                                        <img src="assets/img/rating-b-1.png" alt=""/>
                                                     </div>
                                                     <div class="rating-b-2" style="width:60%">
-                                                        <img src="../assets/img/rating-b-2.png" alt=""/>
+                                                        <img src="assets/img/rating-b-2.png" alt=""/>
                                                     </div>
                                                 </div>
                                             </div>
@@ -66,7 +66,7 @@
                                 </ion-col>
 
                                 <ion-col col-3 class="contact-us">
-                                    <ion-icon name="chatbubbles" (click)="MessagesDetail()"></ion-icon> 
+                                    <ion-icon name="chatbubbles" (click)="navigateTo('Messages')"></ion-icon>
                                 </ion-col>
                             </ion-row>
                         </div>
@@ -78,7 +78,7 @@
     </div>
 
     <div class="map">
-        <button ion-button full (click)="locationmodal()">{{'Google Address'| translate}}</button>
+        <button ion-button full (click)="navigateTo('GetLocation', true)">{{'Google Address'| translate}}</button>
     </div>
 
     <div class="discription">
@@ -90,7 +90,7 @@
     <ion-list class="prices">
         <ion-list-header>
             {{'price list'| translate}}
-            <div class="add-reviews" item-end (click)="PriceListmodal()"><h2><ion-icon name="add"></ion-icon>{{'Add'| translate}}</h2></div>
+            <div class="add-reviews" item-end (click)="navigateTo('PriceList', true)"><h2><ion-icon name="add"></ion-icon>{{'Add'| translate}}</h2></div>
         </ion-list-header>
         <ion-item *ngFor="let item of priceList">
             <h2>{{item.name}}</h2>
@@ -103,13 +103,13 @@
     <ion-list class="work-time">
         <ion-list-header>
             {{'Work Time'| translate}}
-            <div class="add-reviews" item-end (click)="goWorkTime()"><h2><ion-icon name="construct"></ion-icon>{{'Edit'| translate}}</h2></div>
+            <div class="add-reviews" item-end (click)="navigateTo('WorkTime', true)"><h2><ion-icon name="construct"></ion-icon>{{'Edit'| translate}}</h2></div>
         </ion-list-header>
         <ion-item>
             <h2>{{'Saturday'| translate}}</h2>
             <p>{{'From'|translate}} 8 am {{'To'|translate}} 5 pm</p>
             <p>{{'From'|translate}} 8 am {{'To'|translate}} 5 pm</p>
-            <button ion-button item-end outline (click)="Reservationmodal()">
+            <button ion-button item-end outline (click)="navigateTo('Reservation', true)">
                     {{'Book'|translate}}
         </button>
     </ion-item>
@@ -117,15 +117,15 @@
     <ion-item>
         <h2>{{'Sunday'| translate}}</h2>
         <p>{{'From'|translate}} 8 am {{'To'|translate}} 5 pm</p>
-        <button ion-button item-end outline (click)="Reservationmodal()">
+        <button ion-button item-end outline (click)="navigateTo('Reservation', true)">
                 {{'Book'|translate}}
     </button>
-</ion-item > 
+</ion-item >
 
 <ion-item>
     <h2>{{'Monday'| translate}}</h2>
     <p>{{'From'|translate}} 8 am {{'To'|translate}} 5 pm</p>
-    <button ion-button item-end outline (click)="Reservationmodal()">
+    <button ion-button item-end outline (click)="navigateTo('Reservation', true)">
             {{'Book'|translate}}
 </button>
 </ion-item>
@@ -133,38 +133,38 @@
 <ion-item>
     <h2>{{'Tuesday'| translate}}</h2>
     <p>{{'From'|translate}} 8 am {{'To'|translate}} 5 pm</p>
-    <button ion-button item-end outline (click)="Reservationmodal()">
+    <button ion-button item-end outline (click)="navigateTo('Reservation', true)">
             {{'Book'|translate}}
 </button>
-</ion-item> 
+</ion-item>
 <ion-item>
     <h2>{{'Wednesday'| translate}}</h2>
     <p>{{'From'|translate}} 8 am {{'To'|translate}} 5 pm</p>
-    <button ion-button item-end outline (click)="Reservationmodal()">
+    <button ion-button item-end outline (click)="navigateTo('Reservation', true)">
             {{'Book'|translate}}
 </button>
-</ion-item> 
+</ion-item>
 </ion-list>
 
 
 <ion-list>
     <ion-list-header>
         {{'Reviews'| translate}}
-        <div class="add-reviews" item-end (click)="addreviewmodal()"><h2><ion-icon name="add"></ion-icon>{{'Add'| translate}}</h2></div>
+        <div class="add-reviews" item-end (click)="navigateTo('AddReview')"><h2><ion-icon name="add"></ion-icon>{{'Add'| translate}}</h2></div>
     </ion-list-header>
     <ion-item>
         <ion-avatar item-start>
-            <img src="../assets/img/14.jpg" alt=""/>
+            <img src="assets/img/14.jpg" alt=""/>
         </ion-avatar>
         <h2>حسين محمود  <span>{{'minute'|translate}} {{'Ago'| translate}}</span></h2>
         <div class="user-rate">
             <div class="stats-container">
                 <div class="rating-b" >
                     <div class="rating-b-1">
-                        <img src="../assets/img/rating-b-1.png" alt=""/>
+                        <img src="assets/img/rating-b-1.png" alt=""/>
                     </div>
                     <div class="rating-b-2" style="width:60%">
-                        <img src="../assets/img/rating-b-2.png" alt=""/>
+                        <img src="assets/img/rating-b-2.png" alt=""/>
                     </div>
                 </div>
                 <span> 3.0</span>
@@ -176,17 +176,17 @@
     </ion-item>
     <ion-item>
         <ion-avatar item-start>
-            <img src="../assets/img/15.jpg" alt=""/>
+            <img src="assets/img/15.jpg" alt=""/>
         </ion-avatar>
         <h2>Ali Hamdy  <span>{{'hour'|translate}} {{'Ago'| translate}}</span></h2>
         <div class="user-rate">
             <div class="stats-container">
                 <div class="rating-b" >
                     <div class="rating-b-1">
-                        <img src="../assets/img/rating-b-1.png" alt=""/>
+                        <img src="assets/img/rating-b-1.png" alt=""/>
                     </div>
                     <div class="rating-b-2" style="width:80%">
-                        <img src="../assets/img/rating-b-2.png" alt=""/>
+                        <img src="assets/img/rating-b-2.png" alt=""/>
                     </div>
                 </div>
                 <span> 4.0</span>
@@ -198,17 +198,17 @@
     </ion-item>
     <ion-item>
         <ion-avatar item-start>
-            <img src="../assets/img/16.jpg" alt=""/>
+            <img src="assets/img/16.jpg" alt=""/>
         </ion-avatar>
         <h2>Hatem Mahmoud  <span>{{'hour'|translate}} {{'Ago'| translate}}</span></h2>
         <div class="user-rate">
             <div class="stats-container">
                 <div class="rating-b" >
                     <div class="rating-b-1">
-                        <img src="../assets/img/rating-b-1.png" alt=""/>
+                        <img src="assets/img/rating-b-1.png" alt=""/>
                     </div>
                     <div class="rating-b-2" style="width:50%">
-                        <img src="../assets/img/rating-b-2.png" alt=""/>
+                        <img src="assets/img/rating-b-2.png" alt=""/>
                     </div>
                 </div>
                 <span> 2.5</span>
