--- a/src/pages/requests/requests.html
+++ b/src/pages/requests/requests.html
@@ -4,7 +4,7 @@
         <ion-title>{{'My Projects' | translate}}</ion-title>
     </ion-navbar>
     <ion-toolbar>
-        
+
     </ion-toolbar>
 
 </ion-header>
@@ -15,7 +15,7 @@
             <ion-list>
                 <ion-item>
                     <ion-thumbnail item-start (click)="goProfilePage()">
-                        <img src="../../assets/img/png/doctor.png">
+                        <img src="assets/img/png/doctor.png">
                     </ion-thumbnail>
                     <h2>{{'Vezeta_doctors'|translate}}<span item-end class="time">منذ ساعة</span></h2>
                     <h4>{{'Request title'|translate}}</h4>
@@ -28,7 +28,7 @@
                 </ion-item>
                 <ion-item>
                     <ion-thumbnail item-start (click)="goProfilePage()">
-                        <img src="../../assets/img/png/iron.png">
+                        <img src="assets/img/png/iron.png">
                     </ion-thumbnail>
                     <h2>{{'Home_services'|translate}}<span item-end class="time">منذ ساعة</span></h2>
                     <h4>{{'Request title'|translate}}</h4>
@@ -41,7 +41,7 @@
                 </ion-item>
                 <ion-item>
                     <ion-thumbnail item-start (click)="goProfilePage()">
-                        <img src="../../assets/img/png/maid.png">
+                        <img src="assets/img/png/maid.png">
                     </ion-thumbnail>
                     <h2>{{'Home_services'|translate}}<span item-end class="time">منذ ساعة</span></h2>
                     <h4>{{'Request title'|translate}}</h4>
@@ -54,7 +54,7 @@
                 </ion-item>
                 <ion-item>
                     <ion-thumbnail item-start (click)="goProfilePage()">
-                        <img src="../../assets/img/png/wedding.png">
+                        <img src="assets/img/png/wedding.png">
                     </ion-thumbnail>
                     <h2>{{'Events_Weddings'|translate}}<span item-end class="time">منذ ساعة</span></h2>
                     <h4>{{'Request title'|translate}}</h4>
