rsolve all image paths in html to use absolute paths

--- a/src/pages/excuted-requests/excuted-requests.html
+++ b/src/pages/excuted-requests/excuted-requests.html
@@ -14,7 +14,7 @@
         <ion-list>
             <ion-item>
                 <ion-thumbnail item-start (click)="goProfilePage()">
-                    <img src="../../assets/img/12.jpg">
+                    <img src="assets/img/12.jpg">
                 </ion-thumbnail>
                 <h2>{{'Hussein Mahmoud'|translate}}<span item-end class="time">منذ ساعة</span></h2>
                 <h4>{{'Request title'|translate}}</h4>
@@ -26,7 +26,7 @@
             </ion-item>
             <ion-item>
                 <ion-thumbnail item-start (click)="goProfilePage()">
-                    <img src="../../assets/img/13.jpg">
+                    <img src="assets/img/13.jpg">
                 </ion-thumbnail>
                 <h2>{{'Hussein Mahmoud'|translate}}<span item-end class="time">منذ ساعة</span></h2>
                 <h4>{{'Request title'|translate}}</h4>
@@ -38,7 +38,7 @@
             </ion-item>
             <ion-item>
                 <ion-thumbnail item-start (click)="goProfilePage()">
-                    <img src="../../assets/img/14.jpg">
+                    <img src="assets/img/14.jpg">
                 </ion-thumbnail>
                 <h2>{{'Hussein Mahmoud'|translate}}<span item-end class="time">منذ ساعة</span></h2>
                 <h4>{{'Request title'|translate}}</h4>
@@ -50,7 +50,7 @@
             </ion-item>
             <ion-item>
                 <ion-thumbnail item-start (click)="goProfilePage()">
-                    <img src="../../assets/img/15.jpg">
+                    <img src="assets/img/15.jpg">
                 </ion-thumbnail>
                 <h2>{{'Hussein Mahmoud'|translate}}<span item-end class="time">منذ ساعة</span></h2>
                 <h4>{{'Request title'|translate}}</h4>
@@ -62,7 +62,7 @@
             </ion-item>
             <ion-item>
                 <ion-thumbnail item-start (click)="goProfilePage()">
-                    <img src="../../assets/img/16.jpg">
+                    <img src="assets/img/16.jpg">
                 </ion-thumbnail>
                 <h2>{{'Hussein Mahmoud'|translate}}<span item-end class="time">منذ ساعة</span></h2>
                 <h4>{{'Request title'|translate}}</h4>
@@ -74,7 +74,7 @@
             </ion-item>
             <ion-item>
                 <ion-thumbnail item-start (click)="goProfilePage()">
-                    <img src="../../assets/img/17.jpg">
+                    <img src="assets/img/17.jpg">
                 </ion-thumbnail>
                 <h2>{{'Hussein Mahmoud'|translate}}<span item-end class="time">منذ ساعة</span></h2>
                 <h4>{{'Request title'|translate}}</h4>
