--- a/src/pages/forget-pass/forget-pass.html
+++ b/src/pages/forget-pass/forget-pass.html
@@ -2,7 +2,7 @@
 <ion-content>
 
     <div class="top-content">
-        <ion-img src="../../assets/img/logofin.png"></ion-img>
+        <ion-img src="assets/img/logofin.png"></ion-img>
     </div>
 
 
