--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -24,7 +24,7 @@
                 <ion-col  col-4 class="category-col">
                     <div class="category" (click)="gosubcategory('services')">
                         <div class='category-img'>
-                            <img src="../assets/img/png/homeserv.png" alt=""/>
+                            <img src="assets/img/png/homeserv.png" alt=""/>
                         </div>
                         <div class="title">
                             <h4>{{'Home_services' | translate}}</h4>
@@ -38,7 +38,7 @@
                 <ion-col  col-4 class="category-col">
                     <div class="category" (click)="gosubcategory('services')">
                         <div class='category-img'>
-                            <img src="../assets/img/png/wedding.png" alt=""/>
+                            <img src="assets/img/png/wedding.png" alt=""/>
                         </div>
                         <div class="title">
                             <h4>{{'Events_Weddings' | translate}}</h4>
@@ -52,7 +52,7 @@
                 <ion-col  col-4 class="category-col">
                     <div class="category" (click)="gosubcategory('services')">
                         <div class='category-img'>
-                            <img src="../assets/img/png/doctor.png" alt=""/>
+                            <img src="assets/img/png/doctor.png" alt=""/>
                         </div>
                         <div class="title">
                             <h4>{{'Vezeta_doctors' | translate}}</h4>
@@ -66,7 +66,7 @@
                 <ion-col  col-4 class="category-col">
                     <div class="category" (click)="gosubcategory('services')">
                         <div class='category-img'>
-                            <img src="../assets/img/png/accesory.png" alt=""/>
+                            <img src="assets/img/png/accesory.png" alt=""/>
                         </div>
                         <div class="title">
                             <h4>{{'Personal' | translate}}</h4>
@@ -80,7 +80,7 @@
                 <ion-col  col-4 class="category-col">
                     <div class="category" (click)="gosubcategory('services')">
                         <div class='category-img'>
-                            <img src="../assets/img/png/24-hours.png" alt=""/>
+                            <img src="assets/img/png/24-hours.png" alt=""/>
                         </div>
                         <div class="title">
                             <h4>{{'On_demand' | translate}}</h4>
@@ -94,7 +94,7 @@
                 <ion-col  col-4 class="category-col">
                     <div class="category" (click)="gosubcategory('services')">
                         <div class='category-img'>
-                            <img src="../assets/img/png/customer-service.png" alt=""/>
+                            <img src="assets/img/png/customer-service.png" alt=""/>
                         </div>
                         <div class="title">
                             <h4>{{'Business_services' | translate}}</h4>
@@ -109,7 +109,7 @@
                 <ion-col  col-4 class="category-col">
                     <div class="category" (click)="gosubcategory('services')">
                         <div class='category-img'>
-                            <img src="../assets/img/png/homeserv.png" alt=""/>
+                            <img src="assets/img/png/homeserv.png" alt=""/>
                         </div>
                         <div class="title">
                             <h4>{{'Home_services' | translate}}</h4>
@@ -123,7 +123,7 @@
                 <ion-col  col-4 class="category-col">
                     <div class="category" (click)="gosubcategory('services')">
                         <div class='category-img'>
-                            <img src="../assets/img/png/wedding.png" alt=""/>
+                            <img src="assets/img/png/wedding.png" alt=""/>
                         </div>
                         <div class="title">
                             <h4>{{'Events_Weddings' | translate}}</h4>
@@ -137,7 +137,7 @@
                 <ion-col  col-4 class="category-col">
                     <div class="category" (click)="gosubcategory('services')">
                         <div class='category-img'>
-                            <img src="../assets/img/png/doctor.png" alt=""/>
+                            <img src="assets/img/png/doctor.png" alt=""/>
                         </div>
                         <div class="title">
                             <h4>{{'Vezeta_doctors' | translate}}</h4>
@@ -151,7 +151,7 @@
                 <ion-col  col-4 class="category-col">
                     <div class="category" (click)="gosubcategory('services')">
                         <div class='category-img'>
-                            <img src="../assets/img/png/accesory.png" alt=""/>
+                            <img src="assets/img/png/accesory.png" alt=""/>
                         </div>
                         <div class="title">
                             <h4>{{'Personal' | translate}}</h4>
@@ -165,7 +165,7 @@
                 <ion-col  col-4 class="category-col">
                     <div class="category" (click)="gosubcategory('services')">
                         <div class='category-img'>
-                            <img src="../assets/img/png/24-hours.png" alt=""/>
+                            <img src="assets/img/png/24-hours.png" alt=""/>
                         </div>
                         <div class="title">
                             <h4>{{'On_demand' | translate}}</h4>
@@ -179,7 +179,7 @@
                 <ion-col  col-4 class="category-col">
                     <div class="category" (click)="gosubcategory('services')">
                         <div class='category-img'>
-                            <img src="../assets/img/png/customer-service.png" alt=""/>
+                            <img src="assets/img/png/customer-service.png" alt=""/>
                         </div>
                         <div class="title">
                             <h4>{{'Business_services' | translate}}</h4>
@@ -198,7 +198,7 @@
                 <ion-col  col-4 class="category-col">
                     <div class="category" (click)="gosubcategory('qoutes')">
                         <div class='category-img'>
-                            <img src="../assets/img/png/homeserv.png" alt=""/>
+                            <img src="assets/img/png/homeserv.png" alt=""/>
                         </div>
                         <div class="title">
                             <h4>{{'Home_services' | translate}}</h4>
@@ -210,7 +210,7 @@
                 <ion-col  col-4 class="category-col">
                     <div class="category" (click)="gosubcategory('qoutes')">
                         <div class='category-img'>
-                            <img src="../assets/img/png/24-hours.png" alt=""/>
+                            <img src="assets/img/png/24-hours.png" alt=""/>
                         </div>
                         <div class="title">
                             <h4>{{'On_demand' | translate}}</h4>
@@ -224,7 +224,7 @@
                 <ion-col  col-4 class="category-col">
                     <div class="category" (click)="gosubcategory('qoutes')">
                         <div class='category-img'>
-                            <img src="../assets/img/png/customer-service.png" alt=""/>
+                            <img src="assets/img/png/customer-service.png" alt=""/>
                         </div>
                         <div class="title">
                             <h4>{{'Business_services' | translate}}</h4>
@@ -248,7 +248,7 @@
                 <ion-col  col-6 class="category-col">
                     <div class="category" (click)="gosubcategory('book')">
                         <div class='category-img'>
-                            <img src="../assets/img/png/doctor.png" alt=""/>
+                            <img src="assets/img/png/doctor.png" alt=""/>
                         </div>
                         <div class="title">
                             <h4>{{'Clinics' | translate}}</h4>
@@ -262,7 +262,7 @@
                 <ion-col  col-6 class="category-col">
                     <div class="category" (click)="gosubcategory('book')">
                         <div class='category-img'>
-                            <img src="../assets/img/png/lab.png" alt=""/>
+                            <img src="assets/img/png/lab.png" alt=""/>
                         </div>
                         <div class="title">
                             <h4>{{'Medical lab' | translate}}</h4>
