--- a/src/pages/messages-detail/messages-detail.html
+++ b/src/pages/messages-detail/messages-detail.html
@@ -53,14 +53,14 @@
        
             <ion-item class="left-chat">
                 <div class="chat-content">
-                    <img src="../../assets/img/12.jpg" alt=""/>
+                    <img src="assets/img/12.jpg" alt=""/>
                 </div>
                 <p>A minute ago</p>
             </ion-item>
 
             <ion-item class="right-chat">
                 <div class="chat-content">
-                    <img src="../../assets/img/logofin.png" alt=""/>
+                    <img src="assets/img/logofin.png" alt=""/>
                 </div>
                 <p>A minute ago</p>
             </ion-item>
