--- a/src/pages/recived-requests/recived-requests.html
+++ b/src/pages/recived-requests/recived-requests.html
@@ -15,7 +15,7 @@
         <ion-list>
             <ion-item>
                 <ion-thumbnail item-start (click)="goProfilePage()">
-                    <img src="../../assets/img/12.jpg">
+                    <img src="assets/img/12.jpg">
                 </ion-thumbnail>
                 <h2>{{'Hussein Mahmoud'|translate}}<span item-end class="time">منذ ساعة</span></h2>
                 <h4>{{'Request title'|translate}}</h4>
@@ -27,7 +27,7 @@
             </ion-item>
             <ion-item>
                 <ion-thumbnail item-start (click)="goProfilePage()">
-                    <img src="../../assets/img/13.jpg">
+                    <img src="assets/img/13.jpg">
                 </ion-thumbnail>
                 <h2>{{'Hussein Mahmoud'|translate}}<span item-end class="time">منذ ساعة</span></h2>
                 <h4>{{'Request title'|translate}}</h4>
@@ -39,7 +39,7 @@
             </ion-item>
             <ion-item>
                 <ion-thumbnail item-start (click)="goProfilePage()">
-                    <img src="../../assets/img/14.jpg">
+                    <img src="assets/img/14.jpg">
                 </ion-thumbnail>
                 <h2>{{'Hussein Mahmoud'|translate}}<span item-end class="time">منذ ساعة</span></h2>
                 <h4>{{'Request title'|translate}}</h4>
@@ -51,7 +51,7 @@
             </ion-item>
             <ion-item>
                 <ion-thumbnail item-start (click)="goProfilePage()">
-                    <img src="../../assets/img/15.jpg">
+                    <img src="assets/img/15.jpg">
                 </ion-thumbnail>
                 <h2>{{'Hussein Mahmoud'|translate}}<span item-end class="time">منذ ساعة</span></h2>
                 <h4>{{'Request title'|translate}}</h4>
@@ -63,7 +63,7 @@
             </ion-item>
             <ion-item>
                 <ion-thumbnail item-start (click)="goProfilePage()">
-                    <img src="../../assets/img/16.jpg">
+                    <img src="assets/img/16.jpg">
                 </ion-thumbnail>
                 <h2>{{'Hussein Mahmoud'|translate}}<span item-end class="time">منذ ساعة</span></h2>
                 <h4>{{'Request title'|translate}}</h4>
@@ -75,7 +75,7 @@
             </ion-item>
             <ion-item>
                 <ion-thumbnail item-start (click)="goProfilePage()">
-                    <img src="../../assets/img/17.jpg">
+                    <img src="assets/img/17.jpg">
                 </ion-thumbnail>
                 <h2>{{'Hussein Mahmoud'|translate}}<span item-end class="time">منذ ساعة</span></h2>
                 <h4>{{'Request title'|translate}}</h4>
