--- a/src/pages/get-location/get-location.html
+++ b/src/pages/get-location/get-location.html
@@ -1,10 +1,13 @@
 <ion-header>
     <ion-navbar>
         <ion-title>{{'Location'|translate}}</ion-title>
-        <ion-buttons start right>
-            <button ion-button (click)="dismiss()">
+        <ion-buttons start>
+            <button  ion-button (click)="dismiss()">
                     <ion-icon name="close"></ion-icon>
             </button>
+            
+        </ion-buttons>
+        <ion-buttons end>
             <button ion-button (click)="addMarker()">
                     <ion-icon ios="ios-locate-outline" md="ios-locate-outline"></ion-icon>
             </button>
