--- a/src/pages/messages/messages.html
+++ b/src/pages/messages/messages.html
@@ -18,7 +18,7 @@
             <ion-list>
                 <ion-item (click)="MessagesDetail()">
                     <ion-thumbnail item-start >
-                        <img src="../../assets/img/png/doctor.png">
+                        <img src="assets/img/png/doctor.png">
                     </ion-thumbnail>
                     <h2>{{'Vezeta_doctors'| translate}}</h2>
                     <p>السلام عليكم كيفك استاذ حسين  </p>
@@ -27,7 +27,7 @@
 
                 <ion-item (click)="MessagesDetail()">
                     <ion-thumbnail item-start >
-                        <img src="../../assets/img/png/homeserv.png">
+                        <img src="assets/img/png/homeserv.png">
                     </ion-thumbnail>
                     <h2>{{'Home_services'| translate}}</h2>
                     <p>يمكننى قضاء جميع المهام التى تريدها أرجو التواصل معي </p>
@@ -37,7 +37,7 @@
                
                 <ion-item (click)="MessagesDetail()">
                     <ion-thumbnail item-start>
-                        <img src="../../assets/img/png/iron.png">
+                        <img src="assets/img/png/iron.png">
                     </ion-thumbnail>
                     <h2>{{'Personal'| translate}}</h2>
                     <p>لقد قمت بكي جميع ملابسك ارجو الحضور لاخذها</p>
@@ -47,7 +47,7 @@
 
                 <ion-item (click)="MessagesDetail()">
                     <ion-thumbnail item-start >
-                        <img src="../../assets/img/png/accesory.png">
+                        <img src="assets/img/png/accesory.png">
                     </ion-thumbnail>
                     <h2>{{'Personal'| translate}}</h2>
                     <p>الموديلات التى كنت بانتظارها وصلت ويمكنك رؤيتها الان</p>
@@ -56,7 +56,7 @@
                 </ion-item> 
                 <ion-item (click)="MessagesDetail()">
                     <ion-thumbnail item-start>
-                        <img src="../../assets/img/png/doctor.png">
+                        <img src="assets/img/png/doctor.png">
                     </ion-thumbnail>
                     <h2>{{'Vezeta_doctors'| translate}}</h2>
                     <p>يرجى تأكيد ميعاد الحجز عند دكتور محمد</p>
