--- a/src/pages/requests-detail/requests-detail.html
+++ b/src/pages/requests-detail/requests-detail.html
@@ -12,14 +12,14 @@
         <ion-list >
             <ion-item>
                 <ion-thumbnail item-start (click)="goProfilePage()">
-                    <img src="../../assets/img/12.jpg">
+                    <img src="assets/img/12.jpg">
                 </ion-thumbnail>
                 <h2>{{'Hussein Mahmoud'| translate}}<span item-end class="time">week ago</span></h2>
                 <h4>{{'Request title'| translate}}</h4>
                 <p><ion-icon ios="ios-person-outline" md="ios-person-outline"></ion-icon>20 {{'Applicants'|translate}}</p>
                 <ul class="bottom-category">
                     <li>
-                        <img src="../../assets/img/png/accesory.png" alt=""/>
+                        <img src="assets/img/png/accesory.png" alt=""/>
                     </li>
                     <li>
                         <h2>{{'Personal'| translate}}</h2>
@@ -72,7 +72,7 @@
             </ion-list-header>
             <ion-item class="choosen-applicant">
                 <ion-avatar item-start>
-                    <img src="../assets/img/14.jpg" alt="" (click)="goProfilePage()"/>
+                    <img src="assets/img/14.jpg" alt="" (click)="goProfilePage()"/>
                     <div class="choose-me" (click)="presentToast()">
                         <h4>choosed</h4>
                     </div>
@@ -84,10 +84,10 @@
                     <div class="stats-container">
                         <div class="rating-b" >
                             <div class="rating-b-1">
-                                <img src="../assets/img/rating-b-1.png" alt=""/>
+                                <img src="assets/img/rating-b-1.png" alt=""/>
                             </div>
                             <div class="rating-b-2" style="width:60%">
-                                <img src="../assets/img/rating-b-2.png" alt=""/>
+                                <img src="assets/img/rating-b-2.png" alt=""/>
                             </div>
                         </div>
                         <span>3.0</span>
@@ -102,7 +102,7 @@
             </ion-item>
             <ion-item class="">
                 <ion-avatar item-start>
-                    <img src="../assets/img/14.jpg" alt="" (click)="goProfilePage()"/>
+                    <img src="assets/img/14.jpg" alt="" (click)="goProfilePage()"/>
                     <div class="choose-me" (click)="presentToast()">
                         <h4>choose me</h4>
                     </div>
@@ -114,10 +114,10 @@
                     <div class="stats-container">
                         <div class="rating-b" >
                             <div class="rating-b-1">
-                                <img src="../assets/img/rating-b-1.png" alt=""/>
+                                <img src="assets/img/rating-b-1.png" alt=""/>
                             </div>
                             <div class="rating-b-2" style="width:40%">
-                                <img src="../assets/img/rating-b-2.png" alt=""/>
+                                <img src="assets/img/rating-b-2.png" alt=""/>
                             </div>
                         </div>
                         <span>2.0</span>
@@ -132,7 +132,7 @@
             </ion-item>
             <ion-item class="">
                 <ion-avatar item-start>
-                    <img src="../assets/img/14.jpg" alt="" (click)="goProfilePage()"/>
+                    <img src="assets/img/14.jpg" alt="" (click)="goProfilePage()"/>
                     <div class="choose-me" (click)="presentToast()">
                         <h4>choose me</h4>
                     </div>
@@ -144,10 +144,10 @@
                     <div class="stats-container">
                         <div class="rating-b" >
                             <div class="rating-b-1">
-                                <img src="../assets/img/rating-b-1.png" alt=""/>
+                                <img src="assets/img/rating-b-1.png" alt=""/>
                             </div>
                             <div class="rating-b-2" style="width:80%">
-                                <img src="../assets/img/rating-b-2.png" alt=""/>
+                                <img src="assets/img/rating-b-2.png" alt=""/>
                             </div>
                         </div>
                         <span>4.0</span>
