--- a/src/pages/search-results/search-results.html
+++ b/src/pages/search-results/search-results.html
@@ -20,14 +20,14 @@
     <ion-list>
         <ion-item (click)="goDynamicPage()">
             <ion-thumbnail item-start>
-                <img src="../assets/img/png/iron.png" alt=""/>
+                <img src="assets/img/png/iron.png" alt=""/>
             </ion-thumbnail>
             <h2>كي ملابس</h2>
             <ion-icon ios="ios-arrow-back" md="ios-arrow-back"></ion-icon>
         </ion-item>
         <ion-item (click)="goAddRequest()">
             <ion-thumbnail item-start>
-                <img src="../assets/img/png/washing-machine.png" alt=""/>
+                <img src="assets/img/png/washing-machine.png" alt=""/>
             </ion-thumbnail>
             <h2>تنظيف ملابس</h2>
             <ion-icon ios="ios-arrow-back" md="ios-arrow-back"></ion-icon>
@@ -36,14 +36,14 @@
 
         <ion-item (click)="goAddRequest()">
             <ion-thumbnail item-start>
-                <img src="../assets/img/png/liquid-soap.png" alt=""/>
+                <img src="assets/img/png/liquid-soap.png" alt=""/>
             </ion-thumbnail>
             <h2>غسيل أطباق</h2>
             <ion-icon ios="ios-arrow-back" md="ios-arrow-back"></ion-icon>
         </ion-item>
         <ion-item (click)="goAddRequest()">
             <ion-thumbnail item-start>
-                <img src="../assets/img/png/cleaner.png" alt=""/>
+                <img src="assets/img/png/cleaner.png" alt=""/>
             </ion-thumbnail>
             <h2>تنظيف المنزل</h2>
             <ion-icon ios="ios-arrow-back" md="ios-arrow-back"></ion-icon>
@@ -52,14 +52,14 @@
 
         <ion-item (click)="goAddRequest()">
             <ion-thumbnail item-start>
-                <img src="../assets/img/png/portable-fridge.png" alt=""/>
+                <img src="assets/img/png/portable-fridge.png" alt=""/>
             </ion-thumbnail>
             <h2>ثلاجات محمولة</h2>
             <ion-icon ios="ios-arrow-back" md="ios-arrow-back"></ion-icon>
         </ion-item>
         <ion-item (click)="goAddRequest()">
             <ion-thumbnail item-start>
-                <img src="../assets/img/png/washing-machine.png" alt=""/>
+                <img src="assets/img/png/washing-machine.png" alt=""/>
             </ion-thumbnail>
             <h2>تنظيف ملابس</h2>
             <ion-icon ios="ios-arrow-back" md="ios-arrow-back"></ion-icon>
@@ -68,14 +68,14 @@
 
         <ion-item (click)="goAddRequest()">
             <ion-thumbnail item-start>
-                <img src="../assets/img/png/cleaner.png" alt=""/>
+                <img src="assets/img/png/cleaner.png" alt=""/>
             </ion-thumbnail>
             <h2>كي ملابس</h2>
             <ion-icon ios="ios-arrow-back" md="ios-arrow-back"></ion-icon>
         </ion-item>
         <ion-item (click)="goAddRequest()">
             <ion-thumbnail item-start>
-                <img src="../assets/img/png/washing-machine.png" alt=""/>
+                <img src="assets/img/png/washing-machine.png" alt=""/>
             </ion-thumbnail>
             <h2>تنظيف ملابس</h2>
             <ion-icon ios="ios-arrow-back" md="ios-arrow-back"></ion-icon>
