--- a/src/pages/user-list/user-list.html
+++ b/src/pages/user-list/user-list.html
@@ -10,7 +10,7 @@
         <ion-list>
             <ion-item>
                 <ion-thumbnail item-start (click)="goProfilePage()">
-                               <img src="../../assets/img/12.jpg">
+                               <img src="assets/img/12.jpg">
                 </ion-thumbnail>
                 <h2>حسين محمود</h2>
                 <span item-end class="distance">50 km</span>
@@ -18,10 +18,10 @@
                     <div class="stats-container">
                         <div class="rating-b" >
                             <div class="rating-b-1">
-                                <img src="../assets/img/rating-b-1.png" alt=""/>
+                                <img src="assets/img/rating-b-1.png" alt=""/>
                             </div>
                             <div class="rating-b-2" style="width:100%">
-                                <img src="../assets/img/rating-b-2.png" alt=""/>
+                                <img src="assets/img/rating-b-2.png" alt=""/>
                             </div>
                         </div>
                         <span> 5.0</span>
@@ -36,7 +36,7 @@
             </ion-item>
             <ion-item>
                 <ion-thumbnail item-start (click)="goProfilePage()">
-                               <img src="../../assets/img/13.jpg">
+                               <img src="assets/img/13.jpg">
                 </ion-thumbnail>
                 <h2>حسين محمود</h2>
                 <span item-end class="distance">10 km</span>
@@ -44,10 +44,10 @@
                     <div class="stats-container">
                         <div class="rating-b" >
                             <div class="rating-b-1">
-                                <img src="../assets/img/rating-b-1.png" alt=""/>
+                                <img src="assets/img/rating-b-1.png" alt=""/>
                             </div>
                             <div class="rating-b-2" style="width:90%">
-                                <img src="../assets/img/rating-b-2.png" alt=""/>
+                                <img src="assets/img/rating-b-2.png" alt=""/>
                             </div>
                         </div>
                         <span> 4.5</span>
@@ -61,7 +61,7 @@
             </ion-item>
             <ion-item>
                 <ion-thumbnail item-start (click)="goProfilePage()">
-                               <img src="../../assets/img/14.jpg">
+                               <img src="assets/img/14.jpg">
                 </ion-thumbnail>
                 <h2>حسين محمود</h2>
                 <span item-end class="distance">20 km</span>
@@ -69,10 +69,10 @@
                     <div class="stats-container">
                         <div class="rating-b" >
                             <div class="rating-b-1">
-                                <img src="../assets/img/rating-b-1.png" alt=""/>
+                                <img src="assets/img/rating-b-1.png" alt=""/>
                             </div>
                             <div class="rating-b-2" style="width:50%">
-                                <img src="../assets/img/rating-b-2.png" alt=""/>
+                                <img src="assets/img/rating-b-2.png" alt=""/>
                             </div>
                         </div>
                         <span> 2.5</span>
@@ -86,7 +86,7 @@
             </ion-item>
             <ion-item>
                 <ion-thumbnail item-start (click)="goProfilePage()">
-                               <img src="../../assets/img/15.jpg">
+                               <img src="assets/img/15.jpg">
                 </ion-thumbnail>
                 <h2>حسين محمود</h2>
                 <span item-end class="distance">30 km</span>
@@ -94,10 +94,10 @@
                     <div class="stats-container">
                         <div class="rating-b" >
                             <div class="rating-b-1">
-                                <img src="../assets/img/rating-b-1.png" alt=""/>
+                                <img src="assets/img/rating-b-1.png" alt=""/>
                             </div>
                             <div class="rating-b-2" style="width:30%">
-                                <img src="../assets/img/rating-b-2.png" alt=""/>
+                                <img src="assets/img/rating-b-2.png" alt=""/>
                             </div>
                         </div>
                         <span> 1.5</span>
@@ -111,7 +111,7 @@
             </ion-item>
             <ion-item>
                 <ion-thumbnail item-start (click)="goProfilePage()">
-                               <img src="../../assets/img/16.jpg">
+                               <img src="assets/img/16.jpg">
                 </ion-thumbnail>
                 <h2>حسين محمود مصطفى  </h2>
                 <span item-end class="distance">50 km</span>
@@ -119,10 +119,10 @@
                     <div class="stats-container">
                         <div class="rating-b" >
                             <div class="rating-b-1">
-                                <img src="../assets/img/rating-b-1.png" alt=""/>
+                                <img src="assets/img/rating-b-1.png" alt=""/>
                             </div>
                             <div class="rating-b-2" style="width:70%">
-                                <img src="../assets/img/rating-b-2.png" alt=""/>
+                                <img src="assets/img/rating-b-2.png" alt=""/>
                             </div>
                         </div>
                         <span> 3.5</span>
@@ -137,7 +137,7 @@
             </ion-item>
             <ion-item>
                 <ion-thumbnail item-start (click)="goProfilePage()">
-                               <img src="../../assets/img/17.jpg">
+                               <img src="assets/img/17.jpg">
                 </ion-thumbnail>
                 <h2>حسين محمود</h2>
                 <span item-end class="distance">70 km</span>
@@ -145,10 +145,10 @@
                     <div class="stats-container">
                         <div class="rating-b" >
                             <div class="rating-b-1">
-                                <img src="../assets/img/rating-b-1.png" alt=""/>
+                                <img src="assets/img/rating-b-1.png" alt=""/>
                             </div>
                             <div class="rating-b-2" style="width:0%">
-                                <img src="../assets/img/rating-b-2.png" alt=""/>
+                                <img src="assets/img/rating-b-2.png" alt=""/>
                             </div>
                         </div>
                         <span> 0.0</span>
