--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -23,7 +23,7 @@
                         <div class="user-img">
                             <img src="assets/img/12.jpg" alt=""/>
                         </div>
-                        <button ion-button item-end class="setting-btn" (click)="navigateTo('EditProfile', true)">
+                        <button clear ion-button item-end class="setting-btn" (click)="navigateTo('EditProfile', true)">
                             <ion-icon ios="ios-settings-outline" md="ios-settings-outline"></ion-icon>
                         </button>
                         <h2 class="user-name">{{'Hussein Mahmoud'| translate}} <span><ion-icon md="ios-checkmark-circle-outline" ios="ios-checkmark-circle-outline"></ion-icon></span></h2>
