--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -23,7 +23,7 @@
     <ion-grid *ngSwitchCase="'services'">
       <ion-row>
         <ion-col col-4 class="category-col">
-          <div class="category" (click)="gosubcategory('services')">
+          <div class="category" (click)="navigateTo('SubCategory')">
             <div class='category-img'>
               <img src="assets/img/png/homeserv.png" alt=""/>
             </div>
@@ -36,7 +36,7 @@
 
 
         <ion-col col-4 class="category-col">
-          <div class="category" (click)="gosubcategory('services')">
+          <div class="category" (click)="navigateTo('SubCategory')">
             <div class='category-img'>
               <img src="assets/img/png/wedding.png" alt=""/>
             </div>
@@ -49,7 +49,7 @@
 
 
         <ion-col col-4 class="category-col">
-          <div class="category" (click)="gosubcategory('services')">
+          <div class="category" (click)="navigateTo('SubCategory')">
             <div class='category-img'>
               <img src="assets/img/png/doctor.png" alt=""/>
             </div>
@@ -62,7 +62,7 @@
 
 
         <ion-col col-4 class="category-col">
-          <div class="category" (click)="gosubcategory('services')">
+          <div class="category" (click)="navigateTo('SubCategory')">
             <div class='category-img'>
               <img src="assets/img/png/accesory.png" alt=""/>
             </div>
@@ -75,7 +75,7 @@
 
 
         <ion-col col-4 class="category-col">
-          <div class="category" (click)="gosubcategory('services')">
+          <div class="category" (click)="navigateTo('SubCategory')">
             <div class='category-img'>
               <img src="assets/img/png/24-hours.png" alt=""/>
             </div>
@@ -88,7 +88,7 @@
 
 
         <ion-col col-4 class="category-col">
-          <div class="category" (click)="gosubcategory('services')">
+          <div class="category" (click)="navigateTo('SubCategory')">
             <div class='category-img'>
               <img src="assets/img/png/customer-service.png" alt=""/>
             </div>
@@ -101,7 +101,7 @@
 
 
         <ion-col col-4 class="category-col">
-          <div class="category" (click)="gosubcategory('services')">
+          <div class="category" (click)="navigateTo('SubCategory')">
             <div class='category-img'>
               <img src="assets/img/png/homeserv.png" alt=""/>
             </div>
@@ -114,7 +114,7 @@
 
 
         <ion-col col-4 class="category-col">
-          <div class="category" (click)="gosubcategory('services')">
+          <div class="category" (click)="navigateTo('SubCategory')">
             <div class='category-img'>
               <img src="assets/img/png/wedding.png" alt=""/>
             </div>
@@ -127,7 +127,7 @@
 
 
         <ion-col col-4 class="category-col">
-          <div class="category" (click)="gosubcategory('services')">
+          <div class="category" (click)="navigateTo('SubCategory')">
             <div class='category-img'>
               <img src="assets/img/png/doctor.png" alt=""/>
             </div>
@@ -140,7 +140,7 @@
 
 
         <ion-col col-4 class="category-col">
-          <div class="category" (click)="gosubcategory('services')">
+          <div class="category" (click)="navigateTo('SubCategory')">
             <div class='category-img'>
               <img src="assets/img/png/accesory.png" alt=""/>
             </div>
@@ -153,7 +153,7 @@
 
 
         <ion-col col-4 class="category-col">
-          <div class="category" (click)="gosubcategory('services')">
+          <div class="category" (click)="navigateTo('SubCategory')">
             <div class='category-img'>
               <img src="assets/img/png/24-hours.png" alt=""/>
             </div>
@@ -166,7 +166,7 @@
 
 
         <ion-col col-4 class="category-col">
-          <div class="category" (click)="gosubcategory('services')">
+          <div class="category" (click)="navigateTo('')">
             <div class='category-img'>
               <img src="assets/img/png/customer-service.png" alt=""/>
             </div>
@@ -185,7 +185,7 @@
     <ion-grid *ngSwitchCase="'qoutes'">
       <ion-row>
         <ion-col col-4 class="category-col">
-          <div class="category" (click)="gosubcategory('qoutes')">
+          <div class="category" (click)="navigateTo('qoutes')">
             <div class='category-img'>
               <img src="assets/img/png/homeserv.png" alt=""/>
             </div>
@@ -197,7 +197,7 @@
         </ion-col>
 
         <ion-col col-4 class="category-col">
-          <div class="category" (click)="gosubcategory('qoutes')">
+          <div class="category" (click)="navigateTo('qoutes')">
             <div class='category-img'>
               <img src="assets/img/png/24-hours.png" alt=""/>
             </div>
@@ -210,7 +210,7 @@
 
 
         <ion-col col-4 class="category-col">
-          <div class="category" (click)="gosubcategory('qoutes')">
+          <div class="category" (click)="navigateTo('qoutes')">
             <div class='category-img'>
               <img src="assets/img/png/customer-service.png" alt=""/>
             </div>
@@ -231,7 +231,7 @@
 
 
         <ion-col col-6 class="category-col">
-          <div class="category" (click)="gosubcategory('book')">
+          <div class="category" (click)="navigateTo('book')">
             <div class='category-img'>
               <img src="assets/img/png/doctor.png" alt=""/>
             </div>
@@ -244,7 +244,7 @@
 
 
         <ion-col col-6 class="category-col">
-          <div class="category" (click)="gosubcategory('book')">
+          <div class="category" (click)="navigateTo('book')">
             <div class='category-img'>
               <img src="assets/img/png/lab.png" alt=""/>
             </div>
