#2 modify on app styles and pages

--- a/src/pages/requests-tabs/requests-tabs.html
+++ b/src/pages/requests-tabs/requests-tabs.html
@@ -1,4 +1,4 @@
-<ion-tabs class="requests-tabs">
+<ion-tabs class="requests-tabs" margin-bottom>
     <ion-tab [root]="RequestsTab" tabTitle="{{'My Projects' | translate}}" tabsHideOnSubPages="true"></ion-tab>
     <ion-tab [root]="RecivedRequestsTab" tabTitle="{{'Received Projects' | translate}}" tabsHideOnSubPages="true"></ion-tab>
     <ion-tab [root]="ExcutedRequestsTab" tabTitle="{{'Implemented Projects' | translate}}" tabsHideOnSubPages="true"></ion-tab>
