--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -54,7 +54,7 @@
                     {{'Application' | translate}}
                 </ion-list-header>
 
-                <ion-item>
+                <ion-item (click)="navigateTo('UsagePolicyPage')">
                     <ion-icon ios="ios-clipboard-outline" md="ios-clipboard-outline" item-start></ion-icon>
                     <div class="inner-item">
                         {{'Usage Policy' | translate}}
