--- a/src/pages/recived-requests/recived-requests.html
+++ b/src/pages/recived-requests/recived-requests.html
@@ -3,9 +3,7 @@
     <ion-navbar>
         <ion-title>{{'Received Projects' | translate}}</ion-title>
     </ion-navbar>
-    <ion-toolbar>
 
-    </ion-toolbar>
 </ion-header>
 
 <ion-content>
@@ -31,7 +29,7 @@
                 </ion-thumbnail>
                 <h2>{{'Hussein Mahmoud'|translate}}<span item-end class="time">منذ ساعة</span></h2>
                 <h4>{{'Request title'|translate}}</h4>
-                <p><ion-icon ios="ios-person-outline" md="ios-person-outline"></ion-icon>10 {{'Applicants'|translate}}</p>
+                <p class="applicants"><ion-icon ios="ios-person-outline" md="ios-person-outline"></ion-icon>10 {{'Applicants'|translate}}</p>
                 <div class="bottom-btn">
                     <button ion-button outline (click)="goRequestsDetail()">{{'Details'|translate}}</button>
                 </div>
@@ -43,7 +41,7 @@
                 </ion-thumbnail>
                 <h2>{{'Hussein Mahmoud'|translate}}<span item-end class="time">منذ ساعة</span></h2>
                 <h4>{{'Request title'|translate}}</h4>
-                <p><ion-icon ios="ios-person-outline" md="ios-person-outline"></ion-icon>10 {{'Applicants'|translate}}</p>
+                <p class="applicants"><ion-icon ios="ios-person-outline" md="ios-person-outline"></ion-icon>10 {{'Applicants'|translate}}</p>
                 <div class="bottom-btn">
                     <button ion-button outline (click)="goRequestsDetail()">{{'Details'|translate}}</button>
                 </div>
@@ -55,7 +53,7 @@
                 </ion-thumbnail>
                 <h2>{{'Hussein Mahmoud'|translate}}<span item-end class="time">منذ ساعة</span></h2>
                 <h4>{{'Request title'|translate}}</h4>
-                <p><ion-icon ios="ios-person-outline" md="ios-person-outline"></ion-icon>10 {{'Applicants'|translate}}</p>
+                <p class="applicants"><ion-icon ios="ios-person-outline" md="ios-person-outline"></ion-icon>10 {{'Applicants'|translate}}</p>
                 <div class="bottom-btn">
                     <button ion-button outline (click)="goRequestsDetail()">{{'Details'|translate}}</button>
                 </div>
@@ -79,7 +77,7 @@
                 </ion-thumbnail>
                 <h2>{{'Hussein Mahmoud'|translate}}<span item-end class="time">منذ ساعة</span></h2>
                 <h4>{{'Request title'|translate}}</h4>
-                <p><ion-icon ios="ios-person-outline" md="ios-person-outline"></ion-icon>10 {{'Applicants'|translate}}</p>
+                <p class="applicants"><ion-icon ios="ios-person-outline" md="ios-person-outline"></ion-icon>10 {{'Applicants'|translate}}</p>
                 <div class="bottom-btn">
                     <button ion-button outline (click)="goRequestsDetail()">{{'Details'|translate}}</button>
                 </div>
