--- a/src/pages/requests/requests.html
+++ b/src/pages/requests/requests.html
@@ -3,9 +3,7 @@
     <ion-navbar>
         <ion-title>{{'My Projects' | translate}}</ion-title>
     </ion-navbar>
-    <ion-toolbar>
 
-    </ion-toolbar>
 
 </ion-header>
 
@@ -19,7 +17,7 @@
                     </ion-thumbnail>
                     <h2>{{'Vezeta_doctors'|translate}}<span item-end class="time">منذ ساعة</span></h2>
                     <h4>{{'Request title'|translate}}</h4>
-                    <p><ion-icon ios="ios-person-outline" md="ios-person-outline"></ion-icon>10 {{'Applicants'|translate}}</p>
+                    <p class="applicants"><ion-icon ios="ios-person-outline" md="ios-person-outline"></ion-icon>10 {{'Applicants'|translate}}</p>
                     <div class="bottom-btn">
                         <button ion-button outline (click)="addreviewmodal()">انهاء</button>
                         <button ion-button outline (click)="goRequestsDetail()">{{'Details'|translate}}</button>
@@ -32,7 +30,7 @@
                     </ion-thumbnail>
                     <h2>{{'Home_services'|translate}}<span item-end class="time">منذ ساعة</span></h2>
                     <h4>{{'Request title'|translate}}</h4>
-                    <p><ion-icon ios="ios-person-outline" md="ios-person-outline"></ion-icon>10 {{'Applicants'|translate}}</p>
+                    <p class="applicants"><ion-icon ios="ios-person-outline" md="ios-person-outline"></ion-icon>10 {{'Applicants'|translate}}</p>
                     <div class="bottom-btn">
                         <button ion-button outline (click)="addreviewmodal()">انهاء</button>
                         <button ion-button outline (click)="goRequestsDetail()">{{'Details'|translate}}</button>
@@ -45,7 +43,7 @@
                     </ion-thumbnail>
                     <h2>{{'Home_services'|translate}}<span item-end class="time">منذ ساعة</span></h2>
                     <h4>{{'Request title'|translate}}</h4>
-                    <p><ion-icon ios="ios-person-outline" md="ios-person-outline"></ion-icon>10 {{'Applicants'|translate}}</p>
+                    <p class="applicants"><ion-icon ios="ios-person-outline" md="ios-person-outline"></ion-icon>10 {{'Applicants'|translate}}</p>
                     <div class="bottom-btn">
                         <button ion-button outline (click)="addreviewmodal()">انهاء</button>
                         <button ion-button outline (click)="goRequestsDetail()">{{'Details'|translate}}</button>
