add user login function to login page

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -20,7 +20,7 @@
         </ion-list>
         <ion-grid>
             <ion-row>
-                <button ion-button full (click)="userLogin()">{{'Login' | translate}}</button>
+                <button ion-button full (click)="userLogin(username, password)">{{'Login' | translate}}</button>
         </ion-row>
 
         <ion-row class="user-links">
