#3 modify app styles and pages

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -15,7 +15,7 @@
 
             <ion-item>
                 <ion-label><ion-icon ios="ios-lock-outline" md="ios-lock-outline" item-start></ion-icon></ion-label>
-                <ion-input floating [(ngModel)]="password" type="password" placeholder="{{'Password' | translate}}" item-end></ion-input>
+                <ion-input  [(ngModel)]="password" type="password" placeholder="{{'Password' | translate}}" item-end></ion-input>
             </ion-item>
         </ion-list>
         <ion-grid>
