--- a/src/pages/usagepolicy/usagepolicy.html
+++ b/src/pages/usagepolicy/usagepolicy.html
@@ -2,7 +2,8 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Usage policy</ion-title>
+    <ion-title>{{'Usage policy'|translate}}</ion-title>
+    
   </ion-navbar>
 
 </ion-header>
