--- a/src/pages/forget-pass/forget-pass.html
+++ b/src/pages/forget-pass/forget-pass.html
@@ -1,4 +1,6 @@
-
+<ion-header>
+    <ion-navbar></ion-navbar>    
+</ion-header>  
 <ion-content>
 
     <div class="top-content">
@@ -21,17 +23,17 @@
          </ion-list>
 
         <ion-row>
-            <button ion-button full (click)="userLogin()">Send
-                    <ion-spinner *ngIf="loginload" name="circles"></ion-spinner>
+            <button ion-button full (click)="sendPhone(phone)">Send
+                    <ion-spinner *ngIf="spinLoader" name="circles"></ion-spinner>
             </button>
         </ion-row>
 
         <ion-row>
             <ion-col width-50>
-                <a (click)="goSignup()" class="new-account" >{{'New Account?' | translate}}</a>
+                <a (click)="navigateTo('Signup')" class="new-account" >{{'New Account?' | translate}}</a>
             </ion-col>
             <ion-col width-50>
-                <a (click)="gologin()" class="forget-pass">Login</a>
+                <a (click)="navigateTo('Login')" class="forget-pass">{{'Login' | translate }}</a>
             </ion-col>
         </ion-row>
     </div>
